added swagger definition for product routes 1
